--- a/README.html
+++ b/README.html
@@ -45,7 +45,7 @@ online lookup operations in cascades of indexed gfsm automata.</p>
 
 <dd>
 <p>Available from:
-<a href="http://www.ling.uni-potsdam.de/~moocow/projects/gfsm">http://www.ling.uni-potsdam.de/~moocow/projects/gfsm</a></p>
+<a href="http://www.kaskade.dwds.de/~moocow/projects/gfsm">http://www.kaskade.dwds.de/~moocow/projects/gfsm</a></p>
 <p>Simple C library for finite state automata.
 Requirs at least version 0.0.10.</p>
 </dd>
@@ -78,7 +78,7 @@ and/or non-standard documentation formats.</p>
 <dd>
 <p>A Perl module used to generate command-line option parsers.
 Should be available from the author of this package at:</p>
-<p><a href="http://www.ling.uni-potsdam.de/~moocow/projects/perl">http://www.ling.uni-potsdam.de/~moocow/projects/perl</a></p>
+<p><a href="http://kaskade.dwds.de/~moocow/projects/perl">http://kaskade.dwds.de/~moocow/projects/perl</a></p>
 <p>Tested versions 0.09, 0.10.</p>
 <p>Note that Getopt::Gen depends on several 3rd-party perl
 modules, including Text::Template and Parse::Lex,
@@ -86,7 +86,7 @@ which are available from CPAN.</p>
 <p>Note additionally that Parse::Lex v2.15 is broken: if
 it gives you grief, use the hacked version available
 at:</p>
-<p><a href="http://www.ling.uni-potsdam.de/~moocow/projects/perl/ParseLex-2.15-hacked.tar.gz">http://www.ling.uni-potsdam.de/~moocow/projects/perl/ParseLex-2.15-hacked.tar.gz</a></p>
+<p><a href="http://kaskade.dwds.de/~moocow/projects/perl/ParseLex-2.15-hacked.tar.gz">http://kaskade.dwds.de/~moocow/projects/perl/ParseLex-2.15-hacked.tar.gz</a></p>
 </dd>
 <dt><strong><a name="pod2latex" class="item">pod2man, pod2text, pod2html, pod2latex (Optional)</a></strong></dt>
 
